--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "epubjs": "^0.3.85",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "web-storage-cache": "^1.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
