--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.3.2",
     "epubjs": "^0.3.85",
     "vue": "^2.6.10",
+    "vue-i18n": "^8.15.0",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1",
     "web-storage-cache": "^1.1.1"
